Compatibility changes to make lib work with Java 11 and Junit 5